--- a/catalog.html
+++ b/catalog.html
@@ -16,9 +16,16 @@
                 <img src="img/menu-logo.png" width="154" height="64" alt="gllacy">
             </div>
             <nav class="main-navigation">
-                <ul>
+                <ul class="main-menu">
                     <li>
-                        <a class="active" href="#">Каталог</a>
+                        <a href="#">Каталог</a>
+                        <ul class="sub-menu">
+                            <li><span class="sub-menu-title">Новинки</span></li>
+                            <li><a href="#">Сливочное</a></li>
+                            <li><span class="active" >Щербеты</li>
+                            <li><a href="#">Фруктовый лёд</a></li>
+                            <li><a href="#">Мелорин</a></li>
+                        </ul>
                     </li>
                     <li>
                         <a href="#">Доставка и оплата</a>
@@ -30,13 +37,13 @@
             </nav>
             <div class="user-block">
                 <div class="user-block-search">
-                    <a class="btn-search" href="#">Поиск</a>
+                    <a class="user-block-btn btn-search" href="#">Поиск</a>
                 </div>
                 <div class="user-block-login">
-                    <a class="btn-login" href="#">Вход</a>
+                    <a class="user-block-btn btn-login" href="#">Вход</a>
                 </div>
                 <div class="user-block-cart">
-                    <a class="btn-cart" href="#">Пусто</a>
+                    <a class="user-block-btn btn-cart" href="#">Пусто</a>
                 </div>
             </div>
         </div>
@@ -46,9 +53,11 @@
             <ol class="breadcrumb">
                 <li>
                     <a href="#">Главная</a>
+                    <span class="raquo">&raquo;</span>
                 </li>
                 <li>
                     <a href="#">Каталог</a>
+                    <span class="raquo">&raquo;</span>
                 </li>
                 <li>
                     Сливочное
@@ -109,99 +118,137 @@
             </div>
         </form>
         <section class="catalog-list clearfix">
-            <article class="catalog-hits-item">
-                <img src="img/catalog-item-1.png" width="200" height="200" alt="Сливочное с апельсиновым джемом и цитрусовй стружкой">
-                <span>310 р/кг</span>
+            <article class="catalog-hits-item hits-item">
+                <img src="img/hit-item-1.jpg" width="200" height="200" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                <div class="hits-item-price"><span>310</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                 </div>
+                <div class="hits-item-hover">
+                    <a class="btn hits-btn-hover" href="#">Быстрый просмотр</a>
+                </div>
             </article>
-            <article class="catalog-hits-item">
-                <img src="img/catalog-item-2.png" width="200" height="200" alt="Сливочно-кофейное с кусочками шоколада">
-                <span>380 р/кг</span>
+           <article class="catalog-hits-item hits-item">
+                <img src="img/hit-item-2.jpg" width="200" height="200" alt="Сливочно-кофейное с кусочками шоколада">
+                <div class="hits-item-price"><span>380</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочно-кофейное с кусочками шоколада</a>
                 </div>
+                <div class="hits-item-hover">
+                    <a class="btn hits-btn-hover" href="#">Быстрый просмотр</a>
+                </div>
             </article>
-            <article class="catalog-hits-item">
-                <img src="img/catalog-item-3.png" width="200" height="200" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-                <span>355 р/кг</span>
+            <article class="catalog-hits-item hits-item">
+                <img src="img/hit-item-3.jpg" width="200" height="200" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                <div class="hits-item-price"><span>355</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
                 </div>
+                <div class="hits-item-hover">
+                    <a class="btn hits-btn-hover" href="#">Быстрый просмотр</a>
+                </div>
             </article>
-            <article class="catalog-hits-item">
-                <img src="img/catalog-item-4.png" width="200" height="200" alt="Сливочное крем-брюле с карамельной подливкой">
-                <span>415 р/кг</span>
+            <article class="catalog-hits-item hits-item">
+                <img src="img/hit-item-4.jpg" width="200" height="200" alt="Сливочное крем-брюле с карамельной подливкой">
+                <div class="hits-item-price"><span>415</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
                 </div>
+                <div class="hits-item-hover">
+                    <a class="btn hits-btn-hover" href="#">Быстрый просмотр</a>
+                </div>
             </article>
-            <article class="catalog-hits-item">
-                <img src="img/catalog-item-5.png" width="200" height="200" alt="Сливочное с брусничным джемом">
-                <span>325 р/кг</span>
+            <article class="catalog-hits-item hits-item">
+                <img src="img/catalog-item-5.jpg" width="200" height="200" alt="Сливочное с брусничным джемом">
+                <div class="hits-item-price"><span>325</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с брусничным джемом</a>
                 </div>
+                <div class="hits-item-hover">
+                    <a class="btn hits-btn-hover" href="#">Быстрый просмотр</a>
+                </div>
             </article>
-            <article class="catalog-hits-item">
-                <img src="img/catalog-item-6.png" width="200" height="200" alt="Сливочно-черничное с цельными ягодами черники">
-                <span>410 р/кг</span>
+            <article class="catalog-hits-item hits-item">
+                <img src="img/catalog-item-6.jpg" width="200" height="200" alt="Сливочно-черничное с цельными ягодами черники">
+                <div class="hits-item-price"><span>410</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочно-черничное с цельными ягодами черники</a>
                 </div>
+                <div class="hits-item-hover">
+                    <a class="btn hits-btn-hover" href="#">Быстрый просмотр</a>
+                </div>
             </article>
-            <article class="catalog-hits-item">
-                <img src="img/catalog-item-7.png" width="200" height="200" alt="Сливочно-лимонное с карамельной присыпкой">
-                <span>375 р/кг</span>
+            <article class="catalog-hits-item hits-item">
+                <img src="img/catalog-item-7.jpg" width="200" height="200" alt="Сливочно-лимонное с карамельной присыпкой">
+                <div class="hits-item-price"><span>375</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
                 </div>
+                <div class="hits-item-hover">
+                    <a class="btn hits-btn-hover" href="#">Быстрый просмотр</a>
+                </div>
             </article>
-            <article class="catalog-hits-item">
-                <img src="img/catalog-item-8.png" width="200" height="200" alt="Сливочное с шоколадной стружкой">
-                <span>325 р/кг</span>
+            <article class="catalog-hits-item hits-item">
+                <img src="img/catalog-item-8.jpg" width="200" height="200" alt="Сливочное с шоколадной стружкой">
+                <div class="hits-item-price"><span>320</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с шоколадной стружкой</a>
                 </div>
+                <div class="hits-item-hover">
+                    <a class="btn hits-btn-hover" href="#">Быстрый просмотр</a>
+                </div>
             </article>
-            <article class="catalog-hits-item">
-                <img src="img/catalog-item-9.png" width="200" height="200" alt="Сливочно-ванильное с кусочками шоколада">
-                <span>440 р/кг</span>
+            <article class="catalog-hits-item hits-item">
+                <img src="img/catalog-item-9.jpg" width="200" height="200" alt="Сливочно-ванильное с кусочками шоколада">
+                <div class="hits-item-price"><span>440</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочно-ванильное с кусочками шоколада</a>
                 </div>
+                <div class="hits-item-hover">
+                    <a class="btn hits-btn-hover" href="#">Быстрый просмотр</a>
+                </div>
             </article>
-            <article class="catalog-hits-item">
-                <img src="img/catalog-item-10.png" width="200" height="200" alt="Сливочное с ментоловым сиропом">
-                <span>435 р/кг</span>
+            <article class="catalog-hits-item hits-item">
+                <img src="img/catalog-item-10.jpg" width="200" height="200" alt="Сливочное с ментоловым сиропом">
+                <div class="hits-item-price"><span>435</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с ментоловым сиропом</a>
                 </div>
+                <div class="hits-item-hover">
+                    <a class="btn hits-btn-hover" href="#">Быстрый просмотр</a>
+                </div>
             </article>
-            <article class="catalog-hits-item">
-                <img src="img/catalog-item-11.png" width="200" height="200" alt="Сливочное с кусочками чёрного шоколада">
-                <span>355 р/кг</span>
+            <article class="catalog-hits-item hits-item">
+                <img src="img/catalog-item-11.jpg" width="200" height="200" alt="Сливочное с кусочками чёрного шоколада">
+                <div class="hits-item-price"><span>355</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с кусочками чёрного шоколада</a>
                 </div>
+                <div class="hits-item-hover">
+                    <a class="btn hits-btn-hover" href="#">Быстрый просмотр</a>
+                </div>
             </article>
-            <article class="catalog-hits-item">
-                <img src="img/catalog-item-12.png" width="200" height="200" alt="Сливочное с мятным сиропом">
-                <span>420 р/кг</span>
+            <article class="catalog-hits-item hits-item">
+                <img src="img/catalog-item-11.jpg" width="200" height="200" alt="Сливочное с мятным сиропом">
+                <div class="hits-item-price"><span>420</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с мятным сиропом</a>
+                </div>
+                <div class="hits-item-hover">
+                    <a class="btn hits-btn-hover" href="#">Быстрый просмотр</a>
                 </div>
             </article>
         </section><!--catalog-list-->
         <nav class="pagination">
-            <a class="pagination-btn-prev" href="#">&lt;</a>
-            <a class="pagination-item-active" href="#">1</a>
-            <a href="#">2</a>
-            <a href="#">3</a>
-            <a href="#">4</a>
-            <a href="#">5</a>
-            <a class="pagination-btn-next-active" href="#">&gt;</a>
+            <ul>
+                <li><a class="pagination-btn-prev" href="#">&lt;</a></li>
+                <li><a class="pagination-item-active" href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li><a class="pagination-btn-next-active" href="#">&gt;</a></li>
+            </ul>
         </nav>
     </main>
     <footer class="main-footer container clearfix">
@@ -212,7 +259,7 @@
             <a class="social-btn social-btn-vkontakte" href="#">Vkontakte</a>
         </section>
         <section class="main-footer-about">
-            <a href="#">Для поставщиков</a>
+            <a class="provider" href="#">Для поставщиков</a>
             <a href="#">О производстве</a>
         </section>
         <section class="main-footer-documents">
@@ -220,7 +267,7 @@
             <a href="#">Экологические стандарты</a>
         </section>
         <section class="main-footer-copyright">
-            <img src="img/htmlacademy-logo.png" height="108" width="38" alt="HTML academy logo">
+            <img src="img/htmlacademy-logo.png" height="38" width="108" alt="HTML academy logo">
             <div>Сделано в <a href="#">HTML academy</a> &copy; 2016</div>
         </section>
     </footer>
