--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <a href="#">Каталог</a>
                             <ul class="sub-menu">
                                 <li><span class="sub-menu-title">Новинки</span></li>
-                                <li><a href="#">Сливочное</a></li>
+                                <li><a href="index.html">Сливочное</a></li>
                                 <li><span class="active" >Щербеты</li>
                                 <li><a href="#">Фруктовый лёд</a></li>
                                 <li><a href="#">Мелорин</a></li>
@@ -258,7 +258,7 @@
             </section>
             <section class="main-footer-copyright">
                 <img src="img/htmlacademy-logo.png" height="38" width="108" alt="HTML academy logo">
-                <div>Сделано в <a href="#">HTML academy</a> &copy; 2016</div>
+                <div>Сделано в <a href="http://htmlacademy.ru">HTML academy</a> &copy; 2016</div>
             </section>
         </footer>
     </div>
