--- a/catalog.html
+++ b/catalog.html
@@ -18,11 +18,11 @@
             <nav class="main-navigation">
                 <ul class="main-menu">
                     <li>
-                        <a href="#">Каталог</a>
+                        <a class="active" href="#">Каталог</a>
                         <ul class="sub-menu">
                             <li><span class="sub-menu-title">Новинки</span></li>
-                            <li><a href="#">Сливочное</a></li>
-                            <li><span class="active" >Щербеты</li>
+                            <li><span class="active">Сливочное</span></li>
+                            <li><a href="#">Щербеты</a></li>
                             <li><a href="#">Фруктовый лёд</a></li>
                             <li><a href="#">Мелорин</a></li>
                         </ul>
