--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <ul class="sub-menu">
                                 <li><span class="sub-menu-title">Новинки</span></li>
                                 <li><a href="catalog.html">Сливочное</a></li>
-                                <li><span class="active" >Щербеты</li>
+                                <li><a href="#">Щербеты</a></li>
                                 <li><a href="#">Фруктовый лёд</a></li>
                                 <li><a href="#">Мелорин</a></li>
                             </ul>
