Fix hit & catalog item markup

--- a/catalog.html
+++ b/catalog.html
@@ -165,8 +165,10 @@
         </form>
         <section class="catalog-list clearfix">
             <article class="catalog-hits-item hits-item">
-                <img src="img/hit-item-1.jpg" width="200" height="200" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-                <div class="hits-item-price"><span>310</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                <div class="hits-item-inner">
+                    <img src="img/hit-item-1.jpg" width="200" height="200" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                    <div class="hits-item-price"><span>310</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                </div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                 </div>
@@ -175,8 +177,10 @@
                 </div>
             </article>
            <article class="catalog-hits-item hits-item">
-                <img src="img/hit-item-2.jpg" width="200" height="200" alt="Сливочно-кофейное с кусочками шоколада">
-                <div class="hits-item-price"><span>380</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+               <div class="hits-item-inner">
+                    <img src="img/hit-item-2.jpg" width="200" height="200" alt="Сливочно-кофейное с кусочками шоколада">
+                    <div class="hits-item-price"><span>380</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+               </div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочно-кофейное с кусочками шоколада</a>
                 </div>
@@ -185,8 +189,10 @@
                 </div>
             </article>
             <article class="catalog-hits-item hits-item">
-                <img src="img/hit-item-3.jpg" width="200" height="200" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-                <div class="hits-item-price"><span>355</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                <div class="hits-item-inner">
+                    <img src="img/hit-item-3.jpg" width="200" height="200" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                    <div class="hits-item-price"><span>355</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                </div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
                 </div>
@@ -195,8 +201,10 @@
                 </div>
             </article>
             <article class="catalog-hits-item hits-item">
-                <img src="img/hit-item-4.jpg" width="200" height="200" alt="Сливочное крем-брюле с карамельной подливкой">
-                <div class="hits-item-price"><span>415</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                <div class="hits-item-inner">
+                    <img src="img/hit-item-4.jpg" width="200" height="200" alt="Сливочное крем-брюле с карамельной подливкой">
+                    <div class="hits-item-price"><span>415</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                </div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
                 </div>
@@ -205,8 +213,10 @@
                 </div>
             </article>
             <article class="catalog-hits-item hits-item">
-                <img src="img/catalog-item-5.jpg" width="200" height="200" alt="Сливочное с брусничным джемом">
-                <div class="hits-item-price"><span>325</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                <div class="hits-item-inner">
+                    <img src="img/catalog-item-5.jpg" width="200" height="200" alt="Сливочное с брусничным джемом">
+                    <div class="hits-item-price"><span>325</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                </div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с брусничным джемом</a>
                 </div>
@@ -215,8 +225,10 @@
                 </div>
             </article>
             <article class="catalog-hits-item hits-item">
-                <img src="img/catalog-item-6.jpg" width="200" height="200" alt="Сливочно-черничное с цельными ягодами черники">
-                <div class="hits-item-price"><span>410</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                <div class="hits-item-inner">
+                    <img src="img/catalog-item-6.jpg" width="200" height="200" alt="Сливочно-черничное с цельными ягодами черники">
+                    <div class="hits-item-price"><span>410</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                </div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочно-черничное с цельными ягодами черники</a>
                 </div>
@@ -225,8 +237,10 @@
                 </div>
             </article>
             <article class="catalog-hits-item hits-item">
-                <img src="img/catalog-item-7.jpg" width="200" height="200" alt="Сливочно-лимонное с карамельной присыпкой">
-                <div class="hits-item-price"><span>375</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                <div class="hits-item-inner">
+                    <img src="img/catalog-item-7.jpg" width="200" height="200" alt="Сливочно-лимонное с карамельной присыпкой">
+                    <div class="hits-item-price"><span>375</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                </div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
                 </div>
@@ -235,8 +249,10 @@
                 </div>
             </article>
             <article class="catalog-hits-item hits-item">
-                <img src="img/catalog-item-8.jpg" width="200" height="200" alt="Сливочное с шоколадной стружкой">
-                <div class="hits-item-price"><span>320</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                <div class="hits-item-inner">
+                    <img src="img/catalog-item-8.jpg" width="200" height="200" alt="Сливочное с шоколадной стружкой">
+                    <div class="hits-item-price"><span>320</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                </div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с шоколадной стружкой</a>
                 </div>
@@ -245,8 +261,10 @@
                 </div>
             </article>
             <article class="catalog-hits-item hits-item">
-                <img src="img/catalog-item-9.jpg" width="200" height="200" alt="Сливочно-ванильное с кусочками шоколада">
-                <div class="hits-item-price"><span>440</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                <div class="hits-item-inner">
+                    <img src="img/catalog-item-9.jpg" width="200" height="200" alt="Сливочно-ванильное с кусочками шоколада">
+                    <div class="hits-item-price"><span>440</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                </div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочно-ванильное с кусочками шоколада</a>
                 </div>
@@ -255,8 +273,10 @@
                 </div>
             </article>
             <article class="catalog-hits-item hits-item">
-                <img src="img/catalog-item-10.jpg" width="200" height="200" alt="Сливочное с ментоловым сиропом">
-                <div class="hits-item-price"><span>435</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                <div class="hits-item-inner">
+                    <img src="img/catalog-item-10.jpg" width="200" height="200" alt="Сливочное с ментоловым сиропом">
+                    <div class="hits-item-price"><span>435</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                </div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с ментоловым сиропом</a>
                 </div>
@@ -265,8 +285,10 @@
                 </div>
             </article>
             <article class="catalog-hits-item hits-item">
-                <img src="img/catalog-item-11.jpg" width="200" height="200" alt="Сливочное с кусочками чёрного шоколада">
-                <div class="hits-item-price"><span>355</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                <div class="hits-item-inner">
+                    <img src="img/catalog-item-11.jpg" width="200" height="200" alt="Сливочное с кусочками чёрного шоколада">
+                    <div class="hits-item-price"><span>355</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                </div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с кусочками чёрного шоколада</a>
                 </div>
@@ -275,8 +297,10 @@
                 </div>
             </article>
             <article class="catalog-hits-item hits-item">
-                <img src="img/catalog-item-11.jpg" width="200" height="200" alt="Сливочное с мятным сиропом">
-                <div class="hits-item-price"><span>420</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                <div class="hits-item-inner">
+                    <img src="img/catalog-item-12.jpg" width="200" height="200" alt="Сливочное с мятным сиропом">
+                    <div class="hits-item-price"><span>420</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                </div>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с мятным сиропом</a>
                 </div>
