--- a/index.html
+++ b/index.html
@@ -137,8 +137,10 @@
                 </section>
                 <section class="main-hits clearfix">
                     <article class="main-hits-item hits-item">
-                        <img src="img/hit-item-1.jpg" width="200" height="200" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-                        <div class="hits-item-price"><span>310</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                        <div class="main-hits-item-inner hits-item-inner">
+                            <img src="img/hit-item-1.jpg" width="200" height="200" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                            <div class="hits-item-price"><span>310</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                        </div>
                         <div class="hits-item-link-wrapper">
                             <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                         </div>
@@ -147,8 +149,10 @@
                         </div>
                     </article>
                     <article class="main-hits-item hits-item">
-                        <img src="img/hit-item-2.jpg" width="200" height="200" alt="Сливочно-кофейное с кусочками шоколада">
-                        <div class="hits-item-price"><span>380</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                        <div class="main-hits-item-inner hits-item-inner">
+                            <img src="img/hit-item-2.jpg" width="200" height="200" alt="Сливочно-кофейное с кусочками шоколада">
+                            <div class="hits-item-price"><span>380</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                        </div>
                         <div class="hits-item-link-wrapper">
                             <a href="#">Сливочно-кофейное с кусочками шоколада</a>
                         </div>
@@ -157,8 +161,10 @@
                         </div>
                     </article>
                     <article class="main-hits-item hits-item">
-                        <img src="img/hit-item-3.jpg" width="200" height="200" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-                        <div class="hits-item-price"><span>355</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                        <div class="main-hits-item-inner hits-item-inner">
+                            <img src="img/hit-item-3.jpg" width="200" height="200" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                            <div class="hits-item-price"><span>355</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                        </div>
                         <div class="hits-item-link-wrapper">
                             <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
                         </div>
@@ -167,8 +173,10 @@
                         </div>
                     </article>
                     <article class="main-hits-item hits-item">
-                        <img src="img/hit-item-4.jpg" width="200" height="200" alt="Сливочное крем-брюле с карамельной подливкой">
-                        <div class="hits-item-price"><span>415</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                        <div class="main-hits-item-inner hits-item-inner">
+                            <img src="img/hit-item-4.jpg" width="200" height="200" alt="Сливочное крем-брюле с карамельной подливкой">
+                            <div class="hits-item-price"><span>415</span><img src="img/ruble.svg" width="31" height="33" alt="Рубль">/кг</div>
+                        </div>
                         <div class="hits-item-link-wrapper">
                             <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
                         </div>
